--- a/templates/forum/find/post.html
+++ b/templates/forum/find/post.html
@@ -4,14 +4,17 @@
 {% load emarkdown %}
 
 
+
 {% block title %}
     Messages postés par {{ usr.username }}
 {% endblock %}
 
 
+
 {% block headline %}
     Messages postés par "{{ usr.username }}""
 {% endblock %}
+
 
 
 {% block breadcrumb %}
@@ -23,8 +26,9 @@
 {% endblock %}
 
 
+
 {% block content %}
-    {% include "forum/details_pagination.part.html" with position="top" %}
+    {% include "misc/pagination.part.html" with position="top" %}
 
     <div class="row">
         <table>
@@ -58,5 +62,5 @@
         </table>
     </div>
 
-    {% include "forum/details_pagination.part.html" with position="bottom" %}
+    {% include "misc/pagination.part.html" with position="bottom" %}
 {% endblock %}
