--- a/templates/forum/includes/topic_row.part.html
+++ b/templates/forum/includes/topic_row.part.html
@@ -47,7 +47,7 @@
 </div>
 
 
-
+{# TODO : Différents états des forums à intégrer #}
 <!--
 {% if topic.is_sticky %}
     <i class="icon-bookmark" title="Ce sujet est épinglé"></i>
