--- a/templates/forum/post/new.html
+++ b/templates/forum/post/new.html
@@ -24,21 +24,15 @@
 {% block content %}
     {% if newpost %}
     {# TODO: clean ce code : utiliser les alertes de Django #}
-    <div class="row">
-        <div class="large-12 columns">
-            <div class="alert-box alert">
-                <strong>Au moins un nouveau message a été posté</strong> dans la discussion
-                pendant que vous rédigiez le votre.
-            </div>
+        <div class="alert-box alert">
+            <strong>Au moins un nouveau message a été posté</strong> dans la discussion
+            pendant que vous rédigiez le votre.
         </div>
-    </div>
     {% endif %}
 
     {% crispy form %}
 
     {% if form.text.value %}
-        {% with text=form.text.value %}
-            {% include "misc/previsualization.part.html" %}
-        {% endwith %}
+        {% include "misc/previsualization.part.html" with text=form.text.value %}
     {% endif %}
 {% endblock %}
