update newsletter style

--- a/templates/newsletter/base.html
+++ b/templates/newsletter/base.html
@@ -10,7 +10,7 @@
 <body>
 	{% block content %}{% endblock %}
 
-	<script src="{% static "js/jquery.min.js" %}"></script>
+	<script type="text/javascript" src="{% static "bower_components/jquery/dist/jquery.min.js" %}"></script>
 	<script src="{% static "js/newsletter.js" %}"></script>
 </body>
 </html>
