--- a/templates/source.html
+++ b/templates/source.html
@@ -11,7 +11,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}Sans nom{% endblock %}{% block title_base %}{% endblock %} &#183; ZesteDeSavoir</title>
-    {% compressed_css "main-css" %}
+    <link href="{% static "css/zds.css" %}" rel="stylesheet" type="text/css" />
   </head>
   <body>   
 <!-- Header and Nav -->
@@ -342,6 +342,7 @@
     <script type="text/javascript" src="{% static "bower_components/modernizr/modernizr.js" %}"></script>
     <script type="text/javascript" src="{% static "bower_components/fastclick/lib/fastclick.js" %}"></script>
     <script type="text/javascript" src="{% static "bower_components/foundation/js/foundation.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/newsletter.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/editor.js" %}"></script>
     <script>
       $(document).foundation();
