--- a/templates/source.html
+++ b/templates/source.html
@@ -281,9 +281,11 @@
                         <li class="has-dropdown">
                             <a href="#">{{ category.title }}</a>
                             <ul class="dropdown">
-                                {% for forum in category.get_forums %}
-                                    <li><a href="{{ forum.get_absolute_url }}">{{ forum.title }}</a></li>
-                                {% endfor %}
+                                {% with forums=category.get_forums|auth_forums:user %}
+                                  {% for forum in forums %}
+                                      <li><a href="{{ forum.get_absolute_url }}">{{ forum.title }}</a></li>
+                                  {% endfor %}
+                                {% endwith %}
                             </ul>
                         </li>
                     {% endfor %}
