--- a/templates/forum/details.html
+++ b/templates/forum/details.html
@@ -18,6 +18,13 @@
     <li class="current"><a href="javascript:;">{{ forum.title }}</a></li>
 {% endblock %}
 
+{% block headline-actions %}
+    <h3>Actions</h3>
+    <ul>
+        <li><a href="{% url "zds.forum.views.new" %}?forum={{ forum.pk }}" class="ico-after">Nouveau Sujet</a></li>
+    </ul>    
+{% endblock %}
+
 {% block content %}
 
 <div class="row">
