--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -425,7 +425,9 @@ h1.forum, h2.forum, h3.forum, h4.forum, h5.forum, h1.member, h2.member, h3.membe
 }
 
 .username {
-	font-size: 0.9rem;
+	font-size: 0.8rem;
+	padding: 5px;
+	text-align: center;
 }
 
 .avatar-forum {
