--- a/templates/forum/base.html
+++ b/templates/forum/base.html
@@ -61,7 +61,10 @@
                                                 lock
                                             {% endif %}
                                         {% endif %}"
-                                       data-prefix="{% if topic.is_solved %}Résolu{% elif topic.is_locked %}Fermé{% endif %}">
+                                       {% if topic.is_solved or topic.is_locked %}
+                                        data-prefix="{% if topic.is_solved %}Résolu{% elif topic.is_locked %}Fermé{% endif %}"
+                                       {% endif %}
+                                    >
                                         {{ topic.title }}
                                     </a>
                                 </li>
